[tool.poetry]
name = "repl_nix_shodan-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
ujson = "^5.7.0"
XlsxWriter = "^3.1.1"
click = "^8.1.3"
click-plugins = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
